# alain_trans

./: .env.example  Dockerfile  app.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1c316c50f8bd_adding_code_column_to_ticket.py  24aaaf9a928e_adding_devise_to_destination.py  34ca3cc9a91d_adding_price_to_destination.py  45c1f0ae7a1a_first_commit.py  4f6dd936904e_last_revision.py  76a77bbca21c_adding_token_column_to_user_table.py  ab0483b74b98_adding_default_value_to_devise.py  bcc492e9e901_moving_prix_place_to_depart_table.py  c08099dcee2c_insert_metadata.py  e9c1c0e4463a_first_revision.py
db/: db.sql
src/: main.py
src/database/: db.py  db_session.py
src/endpoints/: auth.py  bus.py  colis.py  depart.py  destination.py  ticket.py  utilisateur.py  vehicule.py
src/models/: model.py
src/routes/: api.py
src/utils/: auth_handler.py  my_logger.py  pwd_hash.py
